HIPER UPDATE DEL DIABLO
Tenemos varias cosas. Voy a listarlas:
*Clase Jugador y Enemigos:
Separé a los tipos de personaje de game struct porque iba a quedar larguisimo
Independicé más a las ramas de personajes para que los 2 hereden de Personajes

*Clase Habitación
Nueva clase que se encarga de juntar el maptiles con los tiles. Va a ser estilo TBOI donde vas pasando por habitaciones que se generan a partir de una seed

*Rework de Sprites
Los sprites del jugador los tuve que hacer todos del mismo tamaño para que la hitbox sea constante.

*Tiles sprite
Ahora tenemos un background que es el piso, paredes y rocas. Sencillito

*Rework de animaciones
Ahora con la func getAnimSwitch() las animaciones ya no tiene ese chiqui delay que rompia tanto

*NEW Físicas
Decidi que hay que implementar algunas fisicas mas que nada para que la colisión sea mas entretenida

OBJETIVOS:
*Que el juego termine de verse bien (arreglar tiles y etc)
*Implementar fisicas
*Crear duendes y orcos con sus sprites.
*Crear la generacion de mapa
*Crear el resto de enemigos + complejos
*Crear objetos
*Crear pickups

--- a/RPGGame/RPGGame.cbp
+++ b/RPGGame/RPGGame.cbp
@@ -13,7 +13,7 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="C:/GameLibs/SFML-2.6.2/include" />
+					<Add directory="Librerias/SFML-2.6.2/include" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics-d" />
@@ -21,7 +21,7 @@
 					<Add library="sfml-system-d" />
 					<Add library="sfml-audio-d" />
 					<Add library="sfml-network-d" />
-					<Add directory="C:/GameLibs/SFML-2.6.2/lib" />
+					<Add directory="Librerias/SFML-2.6.2/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -50,11 +50,18 @@
 		<Linker>
 			<Add directory="C:/GameLibs/SFML-2.6.2/lib" />
 		</Linker>
+		<Unit filename="Enemigos.cpp" />
+		<Unit filename="Enemigos.h" />
 		<Unit filename="Game_Class.cpp" />
 		<Unit filename="Game_Class.h" />
+		<Unit filename="Game_MapTiles.cpp" />
+		<Unit filename="Game_MapTiles.h" />
 		<Unit filename="Game_Struct_Clases.cpp" />
 		<Unit filename="Game_Struct_Clases.h" />
-		<Unit filename="Logic_Clases.h" />
+		<Unit filename="Habitacion.cpp" />
+		<Unit filename="Habitacion.h" />
+		<Unit filename="Jugador.cpp" />
+		<Unit filename="Jugador.h" />
 		<Unit filename="Sprites ejemplo/player_sprites_ejemplo.png" />
 		<Unit filename="Visual_Clases.cpp" />
 		<Unit filename="Visual_Clases.h" />
